tests/programs/errors/missing_interface_method.flow
interface Printable {
    fn to_string(self): string
}

type Widget fulfills Printable {
    name: string
}

fn main(): none {
}
